[package]
name = "netnyan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
