[package]
name = "netnyan"
version = "0.1.0"
edition = "2021"
authors = ["kumavale"]
description = "netnyan is a replacement for netcat"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kumavale/netnyan"
categories = ["command-line-utilities"]

[[bin]]
name = "nn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
